--- a/contracts/package.json
+++ b/contracts/package.json
@@ -60,6 +60,7 @@
     "hardhat": "~2.10.1",
     "hardhat-abi-exporter": "^2.2.1",
     "hardhat-contract-sizer": "^2.5.1",
+    "istanbul": "^0.4.5",
     "moment": "^2.29.4",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "1.0.0-beta.18",
