--- a/core/services/chainlink/cfgtest/dump/full-custom.toml
+++ b/core/services/chainlink/cfgtest/dump/full-custom.toml
@@ -40,6 +40,12 @@ SendInterval = '10s'
 SendTimeout = '1m0s'
 UseBatchSend = false
 
+[AuditLogger]
+Enabled = false
+ForwardToUrl = 'http://localhost:9898'
+Environment = 'develop'
+JsonWrapperKey = 'event'
+
 [Log]
 DatabaseQueries = true
 JSONConsole = true
