--- a/core/services/chainlink/testdata/config-multi-chain.toml
+++ b/core/services/chainlink/testdata/config-multi-chain.toml
@@ -4,6 +4,13 @@ RootDir = 'my/root/dir'
 [Database.Listener]
 FallbackPollInterval = '2m0s'
 
+[AuditLogger]
+Enabled = false
+ForwardToUrl = 'http://localhost:9898'
+Environment = 'develop'
+JsonWrapperKey = ''
+Headers = ''
+
 [Log]
 JSONConsole = true
 
