--- a/core/services/chainlink/testdata/config-empty-effective.toml
+++ b/core/services/chainlink/testdata/config-empty-effective.toml
@@ -42,6 +42,12 @@ SendInterval = '500ms'
 SendTimeout = '10s'
 UseBatchSend = true
 
+[AuditLogger]
+Enabled = false
+ForwardToUrl = ''
+JsonWrapperKey = ''
+Headers = ''
+
 [Log]
 DatabaseQueries = false
 JSONConsole = false
