--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -42,6 +42,12 @@ SendInterval = '500ms'
 SendTimeout = '10s'
 UseBatchSend = true
 
+[AuditLogger]
+Enabled = false
+ForwardToUrl = 'http://localhost:9898'
+JsonWrapperKey = ''
+Headers = ''
+
 [Log]
 DatabaseQueries = false
 JSONConsole = true
