--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -45,8 +45,8 @@ UseBatchSend = true
 [AuditLogger]
 Enabled = false
 ForwardToUrl = 'http://localhost:9898'
-JsonWrapperKey = ''
-Headers = ''
+JsonWrapperKey = 'event'
+Headers = 'Authorization||a token here\\Some-Other-Header||other header data here'
 
 [Log]
 DatabaseQueries = true
