--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -159,6 +159,9 @@ MaxPerformDataSize = 5000
 SyncInterval = '1h0m0s'
 SyncUpkeepQueueSize = 31
 
+[Automation]
+PerformGasOverhead = 5300000
+
 [AutoPprof]
 Enabled = true
 ProfileRoot = 'prof/root'
