Updates to tests

--- a/core/services/chainlink/cfgtest/dump/full-custom.toml
+++ b/core/services/chainlink/cfgtest/dump/full-custom.toml
@@ -41,9 +41,10 @@ SendTimeout = '1m0s'
 UseBatchSend = false
 
 [AuditLogger]
-Enabled = false
+Enabled = true
 ForwardToUrl = 'http://localhost:9898'
 JsonWrapperKey = 'event'
+Headers = ''
 
 [Log]
 DatabaseQueries = true
