--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -45,7 +45,7 @@ UseBatchSend = true
 [AuditLogger]
 Enabled = false
 ForwardToUrl = 'http://localhost:9898'
-JsonWrapperKey = ''
+JsonWrapperKey = 'event'
 Headers = ''
 
 [Log]
