--- a/core/services/chainlink/cfgtest/dump/full-custom.env
+++ b/core/services/chainlink/cfgtest/dump/full-custom.env
@@ -36,7 +36,7 @@ LEASE_LOCK_REFRESH_INTERVAL=2s
 AUDIT_LOGGER_ENABLED=true
 AUDIT_LOGGER_FORWARD_TO_URL=http://localhost:9898
 AUDIT_LOGGER_JSON_WRAPPER_KEY=event
-AUDIT_LOGGER_HEADERS="Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*"
+AUDIT_LOGGER_HEADERS=Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*
 
 DATABASE_BACKUP_DIR=db/backup
 DATABASE_BACKUP_FREQUENCY=10m
