--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -45,8 +45,8 @@ UseBatchSend = true
 [AuditLogger]
 Enabled = true
 ForwardToUrl = 'http://localhost:9898'
-JsonWrapperKey = ''
-Headers = ''
+JsonWrapperKey = 'event'
+Headers = 'Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*'
 
 [Log]
 DatabaseQueries = true
