--- a/core/services/chainlink/cfgtest/dump/full-custom.toml
+++ b/core/services/chainlink/cfgtest/dump/full-custom.toml
@@ -44,7 +44,7 @@ UseBatchSend = false
 Enabled = true
 ForwardToUrl = 'http://localhost:9898'
 JsonWrapperKey = 'event'
-Headers = ''
+Headers = 'Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*'
 
 [Log]
 DatabaseQueries = true
