--- a/core/services/chainlink/testdata/config-multi-chain.toml
+++ b/core/services/chainlink/testdata/config-multi-chain.toml
@@ -8,7 +8,7 @@ FallbackPollInterval = '2m0s'
 Enabled = true
 ForwardToUrl = 'http://localhost:9898'
 JsonWrapperKey = 'event'
-Headers = 'Authorization||a token here\Some-Other-Header||other header data here'
+Headers = 'Authorization||token\X-SomeOther-Header||value with spaces | and a bar+*'
 
 [Log]
 JSONConsole = true
