--- a/core/chains/evm/config/v2/defaults/fallback.toml
+++ b/core/chains/evm/config/v2/defaults/fallback.toml
@@ -60,3 +60,6 @@ ContractConfirmations = 4
 ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
+
+[Automation]
+TransmitGasLimit = 5300000
