--- a/core/config/v2/docs/chains-evm.toml
+++ b/core/config/v2/docs/chains-evm.toml
@@ -309,3 +309,7 @@ WSURL = 'wss://web.socket/test' # Example
 HTTPURL = 'https://foo.web' # Example
 # SendOnly limits usage to sending transaction broadcasts only. With this enabled, only HTTPURL is required, and WSURL is not used.
 SendOnly = false # Default
+
+[EVM.Automation]
+# TransmitGasLimit controls the gas limit for transmit transactions from ocr2automation job.
+TransmitGasLimit = 5300000 # Default
