--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -251,6 +251,9 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.Automation]
+TransmitGasLimit = 5300000
+
 [[EVM.Nodes]]
 Name = 'primary'
 WSURL = 'wss://web.socket/mainnet'
@@ -327,6 +330,9 @@ ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
 
+[EVM.Automation]
+TransmitGasLimit = 5300000
+
 [[EVM.Nodes]]
 Name = 'primary'
 WSURL = 'wss://web.socket/test'
@@ -396,6 +402,9 @@ ContractConfirmations = 4
 ContractTransmitterTransmitTimeout = '10s'
 DatabaseTimeout = '10s'
 ObservationGracePeriod = '1s'
+
+[EVM.Automation]
+TransmitGasLimit = 5300000
 
 [[EVM.Nodes]]
 Name = 'primary'
